# Bluebird

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bluebird.py  config.example.toml  configuration_example.json  pyproject.toml  util.py
.github/workflows/: ci.yaml  ci.yml  workflow.yaml
core/: format.py  intercept.py  x.py
handlers/: __init__.py  intercept.py
services/: __init__.py  x.py
